--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - Author of Love and Need: The Life of Robert Frost's Poetry</title>
-    <meta name="description" content="Love and Need: The Life of Robert Frost's Poetry - a book by Adam Plunkett. A compelling exploration of Robert Frost's poetry and life, examining the profound connections between his work and personal experiences."/>
+    <meta name="description" content="Love and Need: The Life of Robert Frost's Poetry - a book by Adam Plunkett"/>
     <style>
     /* Main styles */
     body {
