--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
     /* Main styles */
     body {
-        background-image: url('https://i.imgur.com/uCgDRXG.jpg');
+        background-image: url('https://loveandneed_cover.jpeg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
