--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
     /* Main styles */
     body {
-        background-image: url('images/sitebackground 1.png');
+        background-image: url('images/IMG_9565.heic');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
