--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     
     .book-button-container {
         text-align: center;
-        margin-bottom: 30px;
+        margin: 25px 0 30px 0;
     }
     
     /* Responsive adjustments */
@@ -277,8 +277,8 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="media.html">
-                                    <span>Interviews &c.</span>
+                                <a href="interviews.html">
+                                    <span>&c.</span>
                                 </a>
                             </li>
                             <li class="menu-item">
@@ -307,7 +307,6 @@
                             <!-- Added book title to match provided image -->
                             <div class="book-title">
                                 <span class="book-title-main">Love and Need</span>
-                                <span class="book-title-sub">The Life of Robert Frost's Poetry</span>
                             </div>
                             <!-- Added button with link -->
                             <div class="book-button-container">
