--- a/index.html
+++ b/index.html
@@ -277,13 +277,8 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="interviews.html">
+                                <a href="&c.html">
                                     <span>&c.</span>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="contact.html">
-                                    <span>Contact</span>
                                 </a>
                             </li>
                         </ul>
@@ -307,6 +302,7 @@
                             <!-- Added book title to match provided image -->
                             <div class="book-title">
                                 <span class="book-title-main">Love and Need</span>
+                                <span class="book-title-sub">The Life of Robert Frost's Poetry</span>
                             </div>
                             <!-- Added button with link -->
                             <div class="book-button-container">
