--- a/&c.html
+++ b/&c.html
@@ -310,7 +310,7 @@
                             
                             <div class="author-bio" style="margin-top: 0;">
                                 <p><em><a href="https://us.macmillan.com/books/9780374282080/loveandneed/" target="_blank">Love and Need</a></em> is my first book, out as of Feb. 18, 2025. I am working on a somewhat similar book about Emily Dickinson, also under contract with FSG.</p>
-                                <p>My e-mail address is my name at gmail.</p>
+                                <p>My email address is my name at gmail.</p>
                                 <p>I will be updating this site with interviews and so on.</p>
                             </div>
                             
