--- a/&c.html
+++ b/&c.html
@@ -9,7 +9,7 @@
     <style>
     /* Main styles */
     body {
-        background-image: url('images/sitebackground 1.png');
+        background-image: url('images/FullSizeRender.heic');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
