--- a/&c.html
+++ b/&c.html
@@ -351,7 +351,7 @@
                                 </div>
                             </div>
                               <div class="interview-item">
-                                    <p><em>Updated March 3, 2025</em></p>
+                                    <p>Updated March 3, 2025</p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
