--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - Author of Love and Need: The Life of Robert Frost's Poetry</title>
     <meta name="description" content="Love and Need: The Life of Robert Frost's Poetry - a book by Adam Plunkett"/>
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
