--- a/&c.html
+++ b/&c.html
@@ -6,6 +6,7 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - &c.</title>
     <meta name="description" content="Interviews and more - Adam Plunkett"/>
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
