--- a/&c.html
+++ b/&c.html
@@ -6,7 +6,9 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - &c.</title>
     <meta name="description" content="Interviews and more - Adam Plunkett"/>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+   <link rel="icon" href="images/favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
