--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Adam Plunkett - Author of Love and Need: The Life of Robert Frost's Poetry</title>
     <meta name="description" content="Love and Need: The Life of Robert Frost's Poetry - a book by Adam Plunkett"/>
     <link rel="icon" href="images/favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
