--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
     <style>
     /* Main styles */
     body {
-        background-image: url('images/background.jpg');
+        background: #FFF6E9 url('images/background.jpg') no-repeat center top fixed;
         background-size: cover;
-        background-position: top center; /* Changed to top center to remove wood display at top */
-        background-attachment: fixed;
         font-family: 'Playfair Display', Georgia, serif;
         font-weight: 300;
         margin: 0;
         padding: 0;
         color: #333;
         line-height: 1.6;
-        background-color: #FFF6E9; /* Fallback color if image fails to load */
     }
 
     .site-container {
