--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 <body>
     <!-- New background wrapper with image element instead of CSS background -->
     <div class="background-wrapper">
-        <img class="background-image" src="images/background.jpg" alt="">
+        <img class="background-image" src="/images/background.jpg" alt="">
     </div>
     
     <div class="site-container">
