--- a/&c.html
+++ b/&c.html
@@ -10,7 +10,7 @@
     <style>
     /* Main styles */
     body {
-        background-image: url('images/IMG_9577.heic');
+        background-image: url('images/background2.heic');
         background-size: cover;
         background-position: top center; /* Changed to top center to remove wood display at top */
         background-attachment: fixed;
