--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - Author of Love and Need: The Life of Robert Frost's Poetry</title>
     <meta name="description" content="Love and Need: The Life of Robert Frost's Poetry - a book by Adam Plunkett"/>
-    <link rel="icon" href="images/favicon.png" type="image/png">
-<link rel="apple-touch-icon" href="images/favicon.png">
-<link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
-        background-image: url('images/background.jpg');
+        background-image: url('images/IMG_9577.heic');
         background-size: cover;
         background-position: top center; /* Changed to top center to remove wood display at top */
         background-attachment: fixed;
