--- a/&c.html
+++ b/&c.html
@@ -6,11 +6,11 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
     <title>Adam Plunkett - &c.</title>
     <meta name="description" content="Interviews and more - Adam Plunkett"/>
-   <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
     /* Main styles */
     body {
-        background-image: url('images/background.jpg');
+        background-image: url('images/IMG_9577.heic');
         background-size: cover;
         background-position: top center; /* Changed to top center to remove wood display at top */
         background-attachment: fixed;
