--- a/&c.html
+++ b/&c.html
@@ -9,7 +9,7 @@
     <style>
     /* Main styles */
     body {
-        background-image: url("images/IMG_9577.heic");
+        background-image: url('images/IMG_9577.heic);
         background-size: cover;
         background-position: top center; /* Changed to top center to remove wood display at top */
         background-attachment: fixed;
