--- a/&c.html
+++ b/&c.html
@@ -338,20 +338,16 @@
                             <div class="author-bio" style="margin-top: 0;">
                                 <p><em><a href="https://us.macmillan.com/books/9780374282080/loveandneed/" target="_blank">Love and Need</a></em> is my first book, out as of Feb. 18, 2025. I am working on a somewhat similar book about Emily Dickinson, also under contract with FSG.</p>
                                 <p>My email address is my name at gmail.</p>
-                                <p>I will be updating this site with interviews and so on.</p>
+                                <p>Interviews:</p>
                             </div>
                             
                             <div class="interviews">
                                 <div class="interview-item">
-                                    <p><a href="https://www.wamc.org/podcast/the-roundtable/2025-02-19/adam-plunkett-constructs-an-original-portrait-of-robert" target="_blank">Adam Plunkett constructs an original portrait of Robert Frost in "Love and Need: The Life of Robert Frost's Poetry"</a>—WAMC: The Roundtable, Feb. 19, 2025</p>
+                                    <p><a href="https://www.ctpublic.org/show/the-colin-mcenroe-show/2025-02-24/beyond-woods-and-roads-the-life-and-poetry-of-robert-frost" target="_blank">Beyond woods and roads: The life and poetry of Robert Frost</a>—The Colin McEnroe Show, Feb. 24, 2025</p>
                                 </div>
                                 
                                 <div class="interview-item">
-                                    <p><a href="https://www.ctpublic.org/show/the-colin-mcenroe-show/2025-02-24/beyond-woods-and-roads-the-life-and-poetry-of-robert-frost" target="_blank">Beyond woods and roads: The life and poetry of Robert Frost</a>—The Colin McEnroe Show, Feb. 24, 2025</p>
-                                </div>
-                            </div>
-                              <div class="interview-item">
-                                    <p>Updated March 3, 2025</p>
+                                    <p><a href="https://www.wamc.org/podcast/the-roundtable/2025-02-19/adam-plunkett-constructs-an-original-portrait-of-robert" target="_blank">Adam Plunkett constructs an original portrait of Robert Frost in "Love and Need: The Life of Robert Frost's Poetry"</a>—WAMC: The Roundtable, Feb. 19, 2025</p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
