--- a/&c.html
+++ b/&c.html
@@ -343,11 +343,11 @@
                             
                             <div class="interviews">
                                 <div class="interview-item">
-                                    <p><a href="https://www.ctpublic.org/show/the-colin-mcenroe-show/2025-02-24/beyond-woods-and-roads-the-life-and-poetry-of-robert-frost" target="_blank">Beyond woods and roads: The life and poetry of Robert Frost</a>—The Colin McEnroe Show, Feb. 24, 2025</p>
+                                    <p><a href="https://www.ctpublic.org/show/the-colin-mcenroe-show/2025-02-24/beyond-woods-and-roads-the-life-and-poetry-of-robert-frost" target="_blank">Beyond woods and roads: The life and poetry of Robert Frost</a>—The Colin McEnroe Show</p>
                                 </div>
                                 
                                 <div class="interview-item">
-                                    <p><a href="https://www.wamc.org/podcast/the-roundtable/2025-02-19/adam-plunkett-constructs-an-original-portrait-of-robert" target="_blank">Adam Plunkett constructs an original portrait of Robert Frost in "Love and Need: The Life of Robert Frost's Poetry"</a>—WAMC: The Roundtable, Feb. 19, 2025</p>
+                                    <p><a href="https://www.wamc.org/podcast/the-roundtable/2025-02-19/adam-plunkett-constructs-an-original-portrait-of-robert" target="_blank">Adam Plunkett constructs an original portrait of Robert Frost in "Love and Need: The Life of Robert Frost's Poetry"</a>—WAMC: The Roundtable</p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
