--- a/&c.html
+++ b/&c.html
@@ -342,6 +342,10 @@
                             </div>
                             
                             <div class="interviews">
+                            <div class="interview-item">
+        <p><a href="https://www.youtube.com/watch?v=hfUxv3VQrXU" target="_blank">In conversation with Heather Clark at the Leon Levy Center for Biography</a>—Leon Levy Center for Biography</p>
+    </div>
+</div><div class="interviews">
                                 <div class="interview-item">
                                     <p><a href="https://www.ctpublic.org/show/the-colin-mcenroe-show/2025-02-24/beyond-woods-and-roads-the-life-and-poetry-of-robert-frost" target="_blank">Beyond woods and roads: The life and poetry of Robert Frost</a>—The Colin McEnroe Show</p>
                                 </div>
