--- a/&c.html
+++ b/&c.html
@@ -343,7 +343,7 @@
                             
                             <div class="interviews">
                             <div class="interview-item">
-        <p><a href="https://www.youtube.com/watch?v=hfUxv3VQrXU" target="_blank">In conversation with Heather Clark at the Leon Levy Center for Biography</a>—Leon Levy Center for Biography</p>
+        <p><a href="https://www.youtube.com/watch?v=hfUxv3VQrXU" target="_blank">In conversation with Heather Clark</a>—Leon Levy Center for Biography</p>
     </div>
 </div><div class="interviews">
                                 <div class="interview-item">
