--- a/&c.html
+++ b/&c.html
@@ -358,6 +358,24 @@
     </div>
 </div>
 
+                            <p>Excerpts:</p>
+
+<div class="interview-item">
+    <p><a href="https://poets.org/text/love-and-need-life-robert-frosts-poetry-adam-plunkett" target="_blank">Love and Need: The Life of Robert Frost's Poetry</a> — <i>Academy of American Poets</i></p>
+</div>
+
+<div class="interview-item">
+    <p><a href="https://lithub.com/what-robert-frosts-philosophy-of-the-human-spirit-says-about-his-artistic-ethos/" target="_blank">What Robert Frost's Philosophy of the Human Spirit Says About His Artistic Ethos</a> — <i>Lit Hub</i></p>
+</div>
+
+                            <p>Lists:</p>
+<div class="interview-item">
+    <p><a href="https://www.newyorker.com/best-books-2025" target="_blank">The Best Books We Read This Week</a> — <i>The New Yorker</i></p>
+</div>
+<div class="interview-item">
+    <p><a href="https://lithub.com/lit-hubs-most-anticipated-books-of-2025/" target="_blank">Lit Hub's Most Anticipated Books of 2025</a></i></p>
+</div>
+
                             <div class="clearfix"></div>
                         </div>
                     </article>
