--- a/&c.html
+++ b/&c.html
@@ -361,7 +361,7 @@
                             <p>Excerpts:</p>
 
 <div class="interview-item">
-    <p><a href="https://poets.org/text/love-and-need-life-robert-frosts-poetry-adam-plunkett" target="_blank">Love and Need: The Life of Robert Frost's Poetry</a> — <i>Academy of American Poets</i></p>
+    <p><a href="https://poets.org/text/love-and-need-life-robert-frosts-poetry-adam-plunkett" target="_blank">On "Stopping by Woods on a Snowy Evening"</a> — <i>Academy of American Poets</i></p>
 </div>
 
 <div class="interview-item">
