--- a/&c.html
+++ b/&c.html
@@ -379,6 +379,9 @@
 <div class="interview-item">
     <p><a href="https://lithub.com/lit-hubs-most-anticipated-books-of-2025/" target="_blank">Lit Hub's Most Anticipated Books of 2025</a></i></p>
 </div>
+    <div class="interview-item">
+    <p><a href="https://www.kirkusreviews.com/book-lists/most-anticipated-nonfiction-spring-2025/#the-harder-i-fight-the-more-i-love-you" target="_blank">Kirkus Reviews' Most-Anticipated Nonfiction of Spring 2025</a></i></p>
+</div>
 
                             <div class="clearfix"></div>
                         </div>
