--- a/&c.html
+++ b/&c.html
@@ -343,6 +343,9 @@
                             
 <div class="interviews">
     <div class="interview-item">
+        <p><a href="https://biographersinternational.org/news/podcast/podcast-218-adam-plunkett/">BIO Podcast with Heather Clark</a></p>
+    </div>
+    <div class="interview-item">
         <p><a href="https://www.youtube.com/watch?v=DJNotyz8zUw">"Love and Need" — Adam Plunkett w/ Seth Gannon @ Powell's 3/21/25</a></p>
     </div>
     <div class="interview-item">
