--- a/&c.html
+++ b/&c.html
@@ -374,13 +374,13 @@
 
                             <p>Lists:</p>
 <div class="interview-item">
-    <p><a href="https://www.newyorker.com/best-books-2025" target="_blank">The Best Books We Read This Week</a> — <i>The New Yorker</i></p>
+    <p><a href="https://www.newyorker.com/best-books-2025" target="_blank">The Best Books of the Year So Far</a> — <i>The New Yorker</i></p>
 </div>
 <div class="interview-item">
     <p><a href="https://lithub.com/lit-hubs-most-anticipated-books-of-2025/" target="_blank">Lit Hub's Most Anticipated Books of 2025</a></i></p>
 </div>
     <div class="interview-item">
-    <p><a href="https://www.kirkusreviews.com/book-lists/most-anticipated-nonfiction-spring-2025/#the-harder-i-fight-the-more-i-love-you" target="_blank">Kirkus Reviews' Most-Anticipated Nonfiction of Spring 2025</a></i></p>
+    <p><a href="https://www.kirkusreviews.com/best-of/2025/nonfiction/books/" target="_blank">Kirkus Reviews' Best Books of 2025</a></i></p>
 </div>
 
                             <div class="clearfix"></div>
