--- a/&c.html
+++ b/&c.html
@@ -380,7 +380,7 @@
     <p><a href="https://lithub.com/lit-hubs-most-anticipated-books-of-2025/" target="_blank">Lit Hub's Most Anticipated Books of 2025</a></i></p>
 </div>
     <div class="interview-item">
-    <p><a href="https://www.kirkusreviews.com/best-of/2025/nonfiction/books/" target="_blank">Kirkus Reviews' Best Books of 2025</a></i></p>
+    <p><a href="https://www.kirkusreviews.com/book-lists/best-biographies-2025/" target="_blank">Kirkus Reviews' Best Biographies of 2025</a></i></p>
 </div>
 
                             <div class="clearfix"></div>
